--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@ Glacier Apache Maven Project
       + Project Information                                                    [2] +
       +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +-->
   <name>northem-dark-java</name>
-  <description>Java library implementation of the north-bluish dark color palette "Northem", optimized for syntax highlighting and UI projects.</description>
+  <description>Java library implementation of the north-bluish dark color palette "Northem Dark". Optimized for syntax highlighting and UI projects. This is a darker and more blue-tinged variation.</description>
   <url>https://github.com/arcticicestudio/northem-dark-java</url>
   <inceptionYear>2016</inceptionYear>
   <organization>
