Configure "sudo" behavior

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@
 #   (1) Environment
 #     (1.0) Language
 #     (1.1) JDK
+#     (1.2) Permissions
 #
 # [Copyright]
 # Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -46,4 +47,13 @@ language: java
 jdk:
   - oraclejdk8
 # +----------------------------------------------------------------------[1.1]-+
+
+# +----------------------------------------------------------------------------+
+# + Environment - Permissions                                            [1.2] +
+# +----------------------------------------------------------------------------+
+# Defines the usage of a sudo'ed environment.
+#
+# @since 0.3.0
+sudo: false
+# +----------------------------------------------------------------------[1.2]-+
 # +------------------------------------------------------------------------[1]-+
