--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@
 #     (1.0) Language
 #     (1.1) JDK
 #     (1.2) Permissions
+#     (1.3) Cache
 #
 # [Copyright]
 # Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -56,4 +57,17 @@ jdk:
 # @since 0.3.0
 sudo: false
 # +----------------------------------------------------------------------[1.2]-+
+
+# +----------------------------------------------------------------------------+
+# + Environment - Cache                                                  [1.3] +
+# +----------------------------------------------------------------------------+
+# Sets directories to persist between builds.
+# This is especially useful for dependencies that need to be downloaded and/or
+# compiled from source.
+#
+# @since 0.3.0
+cache:
+ directories:
+    - $HOME/.m2
+# +----------------------------------------------------------------------[1.3]-+
 # +------------------------------------------------------------------------[1]-+
