--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@
 #     (1.1) JDK
 #     (1.2) Permissions
 #     (1.3) Cache
+#   (2) Executions
+#     (2.0) Script
 #
 # [Copyright]
 # Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -71,3 +73,16 @@ cache:
     - $HOME/.m2
 # +----------------------------------------------------------------------[1.3]-+
 # +------------------------------------------------------------------------[1]-+
+
+# +----------------------------------------------------------------------------+
+# + Executions                                                             [2] +
+# +----------------------------------------------------------------------------+
+# +----------------------------------------------------------------------------+
+# + Executions - Script                                                  [2.0] +
+# +----------------------------------------------------------------------------+
+# Sets script command to be executed.
+#
+# @since 0.3.0
+script: mvn -B test -P code-coverage
+# +----------------------------------------------------------------------[2.0]-+
+# +------------------------------------------------------------------------[2]-+
