--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
 # email     development@arcticicestudio.com +
 # copyright Copyright (C) 2016              +
 # created   2016-08-03 14:23 UTC+0200       +
-# modified  2016-08-04 09:04 UTC+0200       +
+# modified  2016-08-04 09:16 UTC+0200       +
 # +++++++++++++++++++++++++++++++++++++++++++
 #
 # [Description]
@@ -21,6 +21,9 @@
 #     (1.3) Cache
 #   (2) Executions
 #     (2.0) Script
+#   (3) Hooks
+#     (3.0) After Success
+#       (3.0.0) codecov-io (codecov-bash)
 #
 # [Copyright]
 # Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -86,3 +89,24 @@ cache:
 script: mvn -B test -P code-coverage
 # +----------------------------------------------------------------------[2.0]-+
 # +------------------------------------------------------------------------[2]-+
+
+# +----------------------------------------------------------------------------+
+# + Hooks                                                                  [3] +
+# +----------------------------------------------------------------------------+
+# +----------------------------------------------------------------------------+
+# + Hooks - After Success                                                [3.0] +
+# +----------------------------------------------------------------------------+
+# Executes specified commands after the build exited successfully.
+#
+# @since 0.3.0
+after_success:
+  # +----------------------------------------------------------------------------+
+  # + Hooks - After Success - codecov-io (codecov-bash)                  [3.0.0] +
+  # +----------------------------------------------------------------------------+
+  # Triggers the codecov.io bash script.
+  #
+  # @since 0.3.0
+  - bash <(curl -s https://codecov.io/bash)
+  # +--------------------------------------------------------------------[3.0.0]-+
+# +----------------------------------------------------------------------[3.0]-+
+# +------------------------------------------------------------------------[3]-+
